<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <ImageView
        android:id="@+id/logo_login"
        android:layout_width="218dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.138"
        app:srcCompat="@drawable/labelle_pink" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        android:layout_width="329dp"
        android:layout_height="36dp"
        android:layout_marginTop="96dp"
        android:background="@drawable/login_button"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="@+id/password_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/password_login"
        app:layout_constraintTop_toBottomOf="@+id/password_login"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/usn_login"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/nunito_regular"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/email"
        android:textColor="#6D6D6D"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_login"
        app:layout_constraintVertical_bias="0.069" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="@font/nunito_regular"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColor="#6D6D6D"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/usn_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usn_login"
        app:layout_constraintTop_toBottomOf="@+id/usn_login"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:background="@drawable/background1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="95dp"
            android:fontFamily="@font/nunito_regular"
            android:text="@string/belum_ada_akun"
            android:textColor="@color/grey_login"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_Move_To_SignUp"
            android:layout_width="108dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="85dp"
            android:layout_toEndOf="@+id/textView3"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/daftar_sekarang"
            android:textColor="@color/daftar_sekarang"
            android:textSize="12sp" />


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>