<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:id="@+id/layout_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backadd"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_arrow_back_24" />
    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_back">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/img_mediheal_dtl"
                android:layout_width="143dp"
                android:layout_height="119dp"
                android:layout_marginTop="36dp"
                android:src="@drawable/mediheal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_brand_dtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/brand"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_mediheal_dtl" />

            <TextView
                android:id="@+id/txt_name_product_dtl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_regular"
                android:text="@string/name_product"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_brand_dtl" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#E7BFCD"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_name_product_dtl"
                app:layout_constraintVertical_bias="0.0" />

            <RelativeLayout
                android:id="@+id/layout_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/view1">

                <TextView
                    android:id="@+id/txt_info_dtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penjelasan_info"
                    android:layout_below="@id/txt_info_dtl"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_how2use"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_info"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/txt_how_to_use_dtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/how_2_use"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/supabase_how2use"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penjelasan_info"
                    android:layout_below="@id/txt_how_to_use_dtl"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"/>

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_how2use"
                android:layout_marginTop="16dp">

                <TextView
                    android:id="@+id/txt_ingredients_dtl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textColor="@color/black"
                    android:textSize="11sp"
                    android:fontFamily="@font/nunito_bold"
                    android:layout_marginStart="16dp"/>

                <TextView
                    android:id="@+id/supabase_ingredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penjelasan_info"
                    android:layout_below="@id/txt_ingredients_dtl"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="16dp"/>

            </RelativeLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>