<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomepageActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/elipse_upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/upper_elipse"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/bulet_bawah"
                app:layout_constraintBottom_toBottomOf="parent" />
            <TextView
                android:id="@+id/hello_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="41dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.033"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.018" />

            <TextView
                android:id="@+id/welcome_words"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/hello_name"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/nunito_light"
                android:text="@string/welcome"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.036"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/hello_name" />



            <LinearLayout
                android:id="@+id/hype_products"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_marginTop="34dp"
                app:layout_constraintTop_toBottomOf="@+id/welcome_words">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/abhaya_libre_bold"
                        android:text="@string/hype"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/hype_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    tools:listitem="@layout/product_item"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/product_recommendation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@+id/hype_products">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/abhaya_libre_bold"
                        android:text="@string/recommend"
                        android:textColor="@color/title_homepage"
                        android:textSize="20sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    tools:listitem="@layout/product_item"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/new_arrivals"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@+id/product_recommendation">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/abhaya_libre_bold"
                        android:text="@string/arrivals"
                        android:textColor="@color/title_homepage"
                        android:textSize="20sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    tools:listitem="@layout/product_item"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/articles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@+id/new_arrivals">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/abhaya_libre_bold"
                        android:text="@string/articles"
                        android:textColor="@color/title_homepage"
                        android:textSize="20sp" />
                </RelativeLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="164dp"
                    tools:listitem="@layout/product_item"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>